kubernetes/apps/external/zigbee2mqtt/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: external
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
